--- a/site/pom.xml
+++ b/site/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.jboss.tools</groupId>
 		<artifactId>server.all</artifactId>
-		<version>4.3.0-SNAPSHOT</version>
+		<version>4.3.0.Beta1-SNAPSHOT</version>
 	</parent>
 	<groupId>org.jboss.tools</groupId>
 	<artifactId>server.site</artifactId>
@@ -14,5 +14,21 @@
 	<properties>
 		<update.site.name>JBoss Tools - Server</update.site.name>
 	</properties>
+	
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-packaging-plugin</artifactId>
+				<executions>
+					<!-- This is necessary to allow us to use 4 segments + -SNAPSHOT versions for p2 repo -->
+				 	<execution>
+				 		<id>default-build-qualifier-aggregator</id>
+				 		<phase>none</phase>
+				 	</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
